# pypika_utility

./: README.md  pyproject.toml
src/pypika_utility/: __init__.py  _version.py
src/pypika_utility/_fixes/: __init__.py
src/pypika_utility/_fixes/Field/: __init__.py
src/pypika_utility/_fixes/QueryBuilder/: __init__.py  from_.py
src/pypika_utility/fixes/Field/: __getitem__.py
src/pypika_utility/fixes/QueryBuilder/: _set_kwargs_defaults.py  from_.py  with_.py
src/pypika_utility/functions/: __init__.py  additional_functions.py  td.py
